Fix label of Display Name input field is out of view when field has focus

--- a/ui/ui-app/src/main/resources/static/assets/app.css
+++ b/ui/ui-app/src/main/resources/static/assets/app.css
@@ -240,6 +240,10 @@ md-sidenav .collapse-btn {
   padding-top: 10px;
 }
 
+.layout-padding-top-20 {
+  padding-top: 20px;
+}
+
 .layout-padding-bottom {
   padding-bottom: 10px;
 }
